<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal"
    tools:context="com.example.matthew.fracground.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fractal_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/fractalSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/fractal_array"
        android:prompt="@string/fractal_prompt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_color_prompt"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/backColorSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/back_color_array"
        android:prompt="@string/back_color_prompt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color1_prompt"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/color1Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/color1_prompt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color2_prompt"

        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/color2Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/color2_prompt" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_prompt"

        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/variantSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/detail_array"
        android:prompt="@string/detail_prompt" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:text="Generate Fractal" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

</LinearLayout>
